--- a/oh_nytaxi_mlops/databricks.yml
+++ b/oh_nytaxi_mlops/databricks.yml
@@ -18,7 +18,7 @@ include:
 
 # Deployment Target specific values for workspace
 targets:
-  dev:  # UC Catalog Name 
+  oh_mlops_dev:  # UC Catalog Name
     default: true
     workspace:
       # TODO: add dev workspace URL
