--- a/oh_nytaxi_mlops/resources/batch-inference-workflow-resource.yml
+++ b/oh_nytaxi_mlops/resources/batch-inference-workflow-resource.yml
@@ -22,7 +22,7 @@ resources:
             notebook_path: ../deployment/batch_inference/notebooks/BatchInference.py
             base_parameters:
               env: ${bundle.target}
-              input_table_name: taxi_scoring_sample  # TODO: create input table for inference
+              input_table_name: feature_store_inference_input  # TODO: create input table for inference
               output_table_name: ${bundle.target}.oh_nytaxi_mlops.predictions
               model_name: ${bundle.target}.oh_nytaxi_mlops.${var.model_name}
               # git source information of current ML resource deployment. It will be persisted as part of the workflow run
